# bildung

./: .env.example  .gitignore  BILDUNG.md  CLAUDE.md  docker-compose.yml  pyproject.toml  reading_list.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_entity_tables.py
docs/001_architecture_improvements/: README.md
docs/002_architecture/: 01_current_state_analysis.md  02_target_architecture.md  03_migration_plan.md  ORCHESTRATOR.md  README.md
docs/002_architecture/tasks/: TASK_0A.md  TASK_0B.md  TASK_0C.md  TASK_1A.md  TASK_1B.md  TASK_1C.md  TASK_2A.md  TASK_2B.md  TASK_2C.md  TASK_3A.md  TASK_3B.md  TASK_4A.md  TASK_4B.md  TASK_5A.md  TASK_5B.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CollectionBlock.tsx  ErrorFallback.tsx  LoadingSpinner.tsx  ProgressBar.tsx  StatusBadge.tsx  WorkRow.tsx  constants.ts
frontend/src/hooks/: useAuthors.ts  useCollections.ts  useStats.ts  useStreams.ts  useWorks.ts
frontend/src/pages/: AddWork.tsx  AuthorDetail.tsx  AuthorList.tsx  CollectionDetail.tsx  StatsPage.tsx  StreamDetail.tsx  StreamList.tsx  WorkDetail.tsx  WorkList.tsx
frontend/src/services/: api.ts
src/bildung/: __init__.py  app_state.py  config.py  dependencies.py  ids.py  main.py
src/bildung/db/: neo4j.py  postgres.py
src/bildung/ingestion/: migrate_neo4j_to_pg.py  reading_list.py  seed_enrichments.py
src/bildung/models/: api.py  domain.py  neo4j.py  postgres.py
tests/: test_ingestion.py  test_openlibrary.py  test_works.py  test_xp.py
(+20 files in other folders)
